Cap_Stone_Project/ingress/frontend-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: sock-shop.Oriakhi-osagbovo.me
      http:
        paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix
