Cap_Stone_Project/ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: sock-shop.Oriakhi-osagbovo.me
      http:
        paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-grafana.Oriakhi-osagbovo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
